--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,11 @@
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
 .prettierignore
+
+# Exclude IDE metafiles
+.idea
+.vscode
+
+
+# Exclude node_modules
+node_modules
