--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,7 @@
 {
-  "printWidth": 100,
-  "trailingComma": "es5",
-  "arrowParens": "avoid",
-  "bracketSameLine": true,
-  "tabWidth": 4,
   "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "printWidth": 100
 }
