--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
   "semi": true,
   "singleQuote": true,
-  "tabWidth": 2,
+  "tabWidth": 4,
   "trailingComma": "es5",
-  "printWidth": 100
+  "printWidth": 100,
+  "arrowParens": "avoid",
+  "bracketSameLine": true
 }
