--- a/package.json
+++ b/package.json
@@ -1,18 +1,35 @@
 {
   "name": "frontend-mentor-assignments",
   "private": true,
-  "workspaces": ["recipe-page"],
+  "type": "module",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "install": "npm install",
-    "build": "npm run build --workspaces",
-
+    "build": "yarn build",
+    "dev": "yarn workspace recipe-page dev",
+    "lint": "yarn eslint .",
     "format": "prettier --write .",
     "format-check": "prettier --check ."
   },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "devDependencies": {
-
-
+    "@eslint/js": "^9.13.0",
+    "@types/node": "^22.8.1",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
+    "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.3.3"
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.13",
+    "globals": "^15.11.0",
+    "prettier": "^3.3.3",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.10.0",
+    "vite": "^5.4.9"
   }
 }
