--- a/packages/recipe-page/solution/tsconfig.json
+++ b/packages/recipe-page/solution/tsconfig.json
@@ -1,10 +1,11 @@
 {
-    "files": [],
+    "extends": "../../../tsconfig.base.json",
     "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "components/*": ["src/components/*"]
+            "@mentor/recipe/components/*": ["src/components/*"],
+            "@mentor/recipe/utilities": ["src/utilities"]
         }
     }
 }
