--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "private": true,
   "type": "module",
   "workspaces": [
-    "packages/*"
+    "packages/recipe-page/solution"
   ],
   "scripts": {
-    "build": "yarn build",
-    "dev": "yarn workspace recipe-page dev",
     "lint": "yarn eslint .",
     "format": "prettier --write .",
     "format-check": "prettier --check ."
@@ -30,6 +28,7 @@
     "prettier": "^3.3.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
-    "vite": "^5.4.9"
+    "vite": "^5.4.9",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
