--- a/packages/recipe-page/solution/tsconfig.json
+++ b/packages/recipe-page/solution/tsconfig.json
@@ -2,10 +2,6 @@
     "extends": "../../../tsconfig.base.json",
     "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
     "compilerOptions": {
-        "baseUrl": ".",
-        "paths": {
-            "@mentor/recipe/components/*": ["src/components/*"],
-            "@mentor/recipe/utilities": ["src/utilities"]
-        }
+        "rootDir": "src"
     }
 }
