--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format-check": "prettier --check ."
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
