--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "frontend-mentor-assignments",
   "private": true,
-  "type": "module",
   "workspaces": [
-    "packages/recipe-page/solution"
+    "packages/*"
   ],
   "scripts": {
-    "lint": "yarn eslint .",
-    "format": "prettier --write .",
-    "format-check": "prettier --check ."
+    "recipe:dev": "yarn workspace recipe dev",
+    "recipe:build": "yarn workspace recipe build",
+    "lint": "eslint .",
+    "format": "prettier --write 'packages/**/*.{ts,tsx,css,json}'",
+    "format-check": "prettier --check 'packages/**/*.{ts,tsx,css,json}'"
   },
   "dependencies": {
     "classnames": "^2.5.1",
@@ -16,20 +17,19 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "@types/node": "^22.8.1",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.3.12",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "@vitejs/plugin-react": "^4.3.3",
-    "eslint": "^9.13.0",
+    "css-modules-typescript-loader": "^4.0.1",
+    "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-define-config": "^2.1.0",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.13",
-    "globals": "^15.11.0",
     "prettier": "^3.3.3",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.10.0",
-    "vite": "^5.4.9",
-    "vite-tsconfig-paths": "^5.0.1"
+    "typescript": "^5.7.2",
+    "vite": "^5.4.11",
+    "vite-tsconfig-paths": "^5.1.3"
   }
 }
