--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "recipe:dev": "yarn workspace recipe dev",
     "recipe:build": "yarn workspace recipe build",
+    "recipe:deploy": "yarn workspace recipe deploy",
     "lint": "eslint .",
     "format": "prettier --write 'packages/**/*.{ts,tsx,css,json}'",
     "format-check": "prettier --check 'packages/**/*.{ts,tsx,css,json}'"
@@ -28,6 +29,7 @@
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
+    "gh-pages": "^6.2.0",
     "prettier": "^3.3.3",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
