tweak deployment details for recipe package

--- a/.github/workflows/deploy-recipe.yml
+++ b/.github/workflows/deploy-recipe.yml
@@ -31,7 +31,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout
+      - name: Checkout the repository
         uses: actions/checkout@v3
 
       - name: Set up Node.js
