--- a/.github/workflows/deploy-recipe.yml
+++ b/.github/workflows/deploy-recipe.yml
@@ -11,7 +11,6 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
   pages: write
   id-token: write
 
@@ -38,13 +37,17 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'yarn'
+          cache: yarn
 
       - name: Install dependencies
         run: yarn install
 
-      - name: Build and Deploy Recipe
-        working-directory: ./packages/recipe
-        run: |
-          yarn build
-          yarn deploy
+      - name: Build the recipe package
+        run: yarn recipe:build
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: packages/recipe/dist
+          destination_branch: gh-pages
