--- a/packages/recipe/package.json
+++ b/packages/recipe/package.json
@@ -8,7 +8,7 @@
         "dev": "vite",
         "build": "tsc -b && vite build",
         "predeploy": "yarn build",
-        "deploy": "gh-pages -d dist -b gh-pages --remove '/*'",
+        "deploy": "gh-pages -d dist -b gh-pages",
         "preview": "vite preview",
         "lint": "eslint ."
     },
